@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>lumify</artifactId>
     <groupId>io.lumify</groupId>
-    <version>0.4.0-SNAPSHOT</version>
+    <version>0.4.0.20141124</version>
     <packaging>pom</packaging>
     <name>Lumify</name>
 
@@ -56,7 +56,7 @@
         <altamira.bigtable.version>0.4.0</altamira.bigtable.version>
         <miniweb.version>0.5.1</miniweb.version>
         <ant.version>1.4.1</ant.version>
-        <atmosphere.version>2.1.1</atmosphere.version>
+        <atmosphere.version>2.2.3</atmosphere.version>
         <commons.beanutils.version>1.9.1</commons.beanutils.version>
         <commons.cli.version>1.2</commons.cli.version>
         <commons.codec.version>1.8</commons.codec.version>
@@ -80,7 +80,7 @@
         <log4j.version>1.2.17</log4j.version>
         <lucene.version>4.7.0</lucene.version>
         <metrics.version>3.0.1</metrics.version>
-        <securegraph.version>0.8.1-SNAPSHOT</securegraph.version>
+        <securegraph.version>0.8.1</securegraph.version>
         <zip4j.version>1.3.1</zip4j.version>
         <zookeeper.version>3.4.6</zookeeper.version>
         <jersey.version>1.18.1</jersey.version>
@@ -643,6 +643,13 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${plugin.maven.surefire.version}</version>
+                    <configuration>
+                        <argLine>-Xmx4096m -XX:MaxPermSize=1024m</argLine>
+                        <excludes>
+                            <exclude>**/*$*</exclude>
+                            <exclude>**/*IntegrationTest.java</exclude>
+                        </excludes>
+                    </configuration>
                     <dependencies>
                         <dependency>
                             <groupId>org.apache.maven.plugins</groupId>
